feat: update brand identity with pixelated lime logo
- Create reusable Logo component with SVG
- Add logo.svg and logo.png to public assets
- Update favicon metadata in layout
- Replace gradient placeholder logos with Logo component across all pages
- Remove unused Sparkles icon from marketplace navigation

--- a/.env.example
+++ b/.env.example
@@ -18,5 +18,9 @@ OPENAI_API_KEY=your-openai-api-key
 ANTHROPIC_API_KEY=your-anthropic-api-key
 GROQ_API_KEY=your-groq-api-key
 
+# Privy Authentication
+# Get your App ID from https://dashboard.privy.io/
+NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id-here
+
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
