--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@hookform/resolvers": "^3.10.0",
     "@langchain/core": "^1.0.1",
     "@langchain/openai": "^1.0.0",
+    "@privy-io/react-auth": "^3.4.1",
+    "@privy-io/wagmi": "^2.0.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
