--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id-here
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Backend API Configuration
+NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
