--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,3 @@
-# Hedera Configuration
-# Get your credentials from https://portal.hedera.com/
-HEDERA_ACCOUNT_ID=0.0.xxxxx
-HEDERA_PRIVATE_KEY=your-hedera-private-key-here
-
-# Ethereum Configuration (for ERC-8004 registries)
-# Sepolia testnet RPC (or your preferred network)
-ETHEREUM_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your-api-key
-ETHEREUM_PRIVATE_KEY=your-ethereum-private-key-here
-
-# ERC-8004 Registry Contract Addresses (Sepolia testnet)
-IDENTITY_REGISTRY_ADDRESS=0x...
-REPUTATION_REGISTRY_ADDRESS=0x...
-VALIDATION_REGISTRY_ADDRESS=0x...
-
-# AI Model Providers (optional - users configure per agent)
-OPENAI_API_KEY=your-openai-api-key
-ANTHROPIC_API_KEY=your-anthropic-api-key
-GROQ_API_KEY=your-groq-api-key
-
 # Privy Authentication
 # Get your App ID from https://dashboard.privy.io/
 NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id-here
@@ -27,3 +7,6 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Backend API Configuration
 NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
+
+# Note: All blockchain, IPFS, and AI API keys are now in the backend
+# The frontend is a pure UI that calls the Fastify backend for all operations
