--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
-# Privy Authentication
-# Get your App ID from https://dashboard.privy.io/
-NEXT_PUBLIC_PRIVY_APP_ID=your-privy-app-id-here
+# WalletConnect Project ID
+# Get your Project ID from https://cloud.walletconnect.com/
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=your-walletconnect-project-id-here
 
 # Application Configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Backend API Configuration
-NEXT_PUBLIC_BACKEND_URL=http://localhost:3001
+NEXT_PUBLIC_BACKEND_URL=http://localhost:10000
 
 # Note: All blockchain, IPFS, and AI API keys are now in the backend
 # The frontend is a pure UI that calls the Fastify backend for all operations
