--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-v0-project",
+  "name": "jurybox-io",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -13,8 +13,6 @@
     "@hookform/resolvers": "^3.10.0",
     "@langchain/core": "^1.0.1",
     "@langchain/openai": "^1.0.0",
-    "@privy-io/react-auth": "^3.4.1",
-    "@privy-io/wagmi": "^2.0.2",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -42,6 +40,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.5",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
@@ -68,6 +67,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.9",
+    "viem": "2",
+    "wagmi": "2",
     "zod": "3.25.76"
   },
   "devDependencies": {
